--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+  margin: 0;
+}
+.ant-layout{
+  background-color: white!important;
+}
